--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
+    "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "next": "9.4.4",
     "react": "16.13.1",
