--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "9.4.4",
     "react": "16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-datepicker": "^3.0.0",
     "react-dom": "16.13.1",
     "react-html-parser": "^2.0.2",
     "sass": "^1.26.8",
