--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-free": "^5.13.0",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "date-format": "^3.0.0",
     "next": "9.4.4",
     "react": "16.13.1",
     "react-bootstrap": "^1.0.1",
