Event get and search

--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "@fortawesome/fontawesome-free": "^5.13.0",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
-    "date-format": "^3.0.0",
+    "dateformat": "^3.0.3",
     "next": "9.4.4",
     "react": "16.13.1",
-    "react-bootstrap": "^1.0.1",
+    "react-bootstrap": "^1.2.2",
     "react-datepicker": "^3.0.0",
     "react-dom": "16.13.1",
     "react-html-parser": "^2.0.2",
