--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-NEXP_PUBLIC_WP_API_BASE_URL="http://fetcher-wordpress.test/wp-json/wp/v2/"
-NEXP_PUBLIC_FETCHER_API_BASE_URL="http://localhost:8000/api/"
+NEXT_PUBLIC_WP_API_URL="http://localhost:8080/wp-json/"
+NEXT_PUBLIC_FETCHER_API_URL="http://localhost:8081/api/"
