--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "16.13.1",
     "react-html-parser": "^2.0.2",
     "react-infinite-scroller": "^1.2.4",
+    "react-parallax": "^3.0.3",
     "sass": "^1.26.8",
     "sprintf": "^0.1.5",
     "swr": "^0.2.2"
