--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "dateformat": "^3.0.3",
+    "formik": "^2.1.5",
     "next": "9.4.4",
     "react": "16.13.1",
     "react-bootstrap": "^1.2.2",
